# ai_n

./: .replit  .workflow  AI_REFERENCE_GUIDE.md  ANALYSE_MODULE_IA.md  IA_api_porte_automatique.sh  deploy_apache.sh  empreintes.db  ia_config.json  ia_porte_logs.txt  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  theme.json
BluetoothNetworkScanner-1/: README.md  ai_predictor.py  app.py  bluetooth_detect.sh  config.sh  database.db  esim_detect.sh  install.sh  lte_detect.sh  network_manager.py  network_stats.json  notify.py  pyproject.toml  replit.nix  server.py  test.py  test_ai_predictor.py  test_app.py  test_simple.py  test_simple_wifi.py  test_vpn.py  wifi_detect.sh
BluetoothNetworkScanner-1/attached_assets/: bluemobile_montreal.ovpn
BluetoothNetworkScanner-1/templates/: index.html
FlaskServer/: ANALYSE_TECHNIQUE.md  main.py  pyproject.toml  requirements.txt  run_flask.sh
FlaskServer/static/: style.css
FlaskServer/templates/: dashboard.html  devices.html  index.html  login.html  register.html
LanguageLearner/server/: routes.ts  storage.ts
api-project/: index.js
attached_assets/: content-1741981209293.md  flask-server-mx76_replit_app.md  modele_ia.sh  run.sh
client/: index.html
client/src/: App.tsx  index.css
server/: routes.ts  storage.ts
server/controllers/: ai-controller.ts  order-controller.ts  porte-automatique-controller.ts  product-controller.ts  user-controller.ts
server/middlewares/: error-handler.ts  validate.ts
server/services/: ai-service.ts  (+1 more)
shared/: schema.ts
test/: test-ai-origins.js  test-ai-service.js
(+43 files in other folders)
