
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "tensorflow>=2.15.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "oauthlib>=3.2.2",
    "eventlet>=0.39.0",
    "python-socketio>=5.12.1",
    "openai>=1.64.0",
    "werkzeug>=3.1.3",
    "nltk>=3.9.1",
]
